# agent-date

./: .dockerignore  .gitignore  Dockerfile  PRESENTACION.md  PRESENTACION_SIMPLIFICADA.md  README.md  app.py  pyproject.toml  requirements.txt  run.sh  server.py  start.sh
src/date_agent/: __init__.py
src/date_agent/agent/: __init__.py  date_agent.py  query_decomposer.py  semantic_parser.py
src/date_agent/calendars/: __init__.py  base_calendar.py  gregorian.py  peru_banking.py  peru_banking_validated.py
src/date_agent/core/: __init__.py  audit.py  config.py  constants.py  exceptions.py
src/date_agent/feedback/: __init__.py  __main__.py  auto_fixer.py  challenger.py  cli.py  config.py  ground_truth.py  models.py  orchestrator.py  report.py  state.py  validator.py
src/date_agent/localization/: __init__.py  english.py  spanish.py
src/date_agent/models/: __init__.py  calendar_types.py  date_types.py  tool_schemas.py
src/date_agent/tools/: __init__.py  base_tool.py  compute_date_range_tool.py  current_date_tool.py  holiday_calendar_tool.py  resolve_period_tool.py
tests/: __init__.py  conftest.py
tests/feedback/: test_challenger.py  test_ground_truth.py  test_validator.py
tests/integration/: __init__.py  test_agent.py  test_query_examples.py
tests/unit/: test_calendars.py  test_complex_temporal_ground_truth.py  test_current_date_tool.py  test_ground_truth.py  test_resolve_period_tool.py
